fixed scroll overflow UI bug

--- a/styles/builder.scss
+++ b/styles/builder.scss
@@ -6,7 +6,12 @@
 }
 .Content_editorTitle__39EUj {
   padding: 5px !important;
+  overflow: scroll;
 }
+.CodeView_editorContainer__Tx5pe{
+  overflow: scroll;
+}
+
 .gjs-editor-cont{
   height: 35rem !important;
 }
